# CalphaEBM

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  train_hq.txt
.github/workflows/: pypi.yml  tests.yml
analysis/backbone_geometry/data/: delta_phi_centers.npy  delta_phi_energy.npy  phi_phi_energy.npy  theta_i_edges_deg.npy  theta_phi_energy.npy  theta_phi_hist.npy  theta_theta_energy.npy
analysis/coordination_analysis/: coord_n_star.json
analysis/repulsion_analysis/data/: contact_counts_loose.npy  contact_counts_medium.npy  contact_counts_tight.npy  log_oe_medium.npy  oe_loose.npy  oe_medium.npy  oe_tight.npy  p_loose.npy  p_medium.npy  p_tight.npy  pmi_loose.npy  pmi_tight.npy  q_loose.npy  q_medium.npy  q_tight.npy  rdf_centers_A.npy  rdf_counts.npy  rdf_edges_A.npy  rdf_g_r.npy  rdf_pmf.npy  repulsive_wall_energy.npy  repulsive_wall_metadata.json  repulsive_wall_r_A.npy  z_loose.npy  z_medium.npy  z_tight.npy
analysis/secondary_analysis/data/: basin_0_energy.npy  basin_1_energy.npy  basin_2_energy.npy  basin_3_energy.npy  phi_edges_deg.npy
checkpoints/run9/run9/: val_ids.txt
docs/: training_phases.md
examples/: quickstart.py  train_local.ipynb.json
scripts/: model_test.py  reproduce_ubiquitin.sh
scripts/simu/: hremd_test.py  physics_prior_native_stability.py  plot_hremd_fes.py  tremd_test.py
scripts/training/: calibrate_phase4b.sh  check_multimers.py  eval_training.sh  repulsion_phase.py  run1_eval100k.sh  run1_full_stage.sh  run1_sc_curriculum.sh  run1_sc_stage.sh  run2_sc_stage.sh  run3_sc_stage.sh  run44.sh  run45.sh  run46.sh  run47.sh  run48.sh  run49.sh  run4_sc_stage.sh  run50.sh  run50_dashboard.jsx  run51.sh  run52.sh  run53.sh  run54.sh  run55.sh  run56.sh  run57.sh  run58.sh  run59.sh  run5_full_stage.sh  run5b_full_stage.sh  run60.sh  run6_full_stage.sh  run7_eval_watcher.sh  run7_sc.sh  run7b_sc.sh  run8_eval_watcher.sh  run8_sc.sh  run9_eval_watcher.sh  run9_full.sh  run9b_full.sh  (+9 more)
src/calphaebm/: __init__.py  _version.py  defaults.py
src/calphaebm/analysis/: __init__.py  base.py
src/calphaebm/analysis/backbone/: __init__.py  cli.py  config.py  core.py  data_loader.py  (+1 more)
src/calphaebm/cli/: __init__.py  main.py
src/calphaebm/data/: __init__.py  aa_map.py  build_dataset.py  build_pdb70_like.py  id_utils.py  pdb_chain_dataset.py  pdb_dataset.py  pdb_parse.py  rcsb_query.py  synthetic.py  warm_cache.py
src/calphaebm/evaluation/: __init__.py  basin_evaluation.py  core_evaluation.py  eval_subprocess.py  plotting.py  reporting.py  training_evaluation.py  trajectory_evaluation.py
src/calphaebm/geometry/: __init__.py  dihedral.py  features.py  internal.py  pairs.py  reconstruct.py
src/calphaebm/models/: __init__.py  cross_terms.py  embeddings.py  energy.py  hbond.py  learnable_buffers.py  local.py  local_terms.py  mlp.py  packing.py  packing_geom.py  packing_hp_pair.py  rama_gate.py  repulsion.py  secondary.py
src/calphaebm/simulation/: __init__.py  base.py  factory.py  fixman.py  hremd.py  io.py  minimize.py  observers.py  tremd.py
src/calphaebm/training/: __init__.py  balancing.py  freeze.py  full_stage.py  hessian_sampler.py  negative_collector.py  phased.py  sc_defaults.py  self_consistent.py
src/calphaebm/utils/: __init__.py  checkpoint.py  constants.py  langevin_utils.py  logging.py  math.py  neighbors.py  seed.py  smooth.py
tests/: __init__.py  conftest.py  test_data.py  test_evaluation.py  test_geometry.py  test_integration.py  test_models.py  test_utils.py
(+114 files in other folders)
