[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "calphaebm"
dynamic = ["version"]
description = "Cα Energy-Based Model for Protein Backbone Dynamics"
readme = "README.md"
authors = [
    {name = "AAi Research Lab", email = "info@aai-lab.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "requests>=2.26.0",
    "biopython>=1.79",
    "tqdm>=4.62.0",
    "mdtraj>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
calphaebm = "calphaebm.cli.main:main"

[tool.setuptools_scm]
write_to = "src/calphaebm/_version.py"
