[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "calphaebm"
dynamic = ["version"]
description = "Cα Energy-Based Model for Protein Backbone Dynamics"
readme = "README.md"
authors = [
    {name = "AAi Research Lab", email = "info@aai-lab.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
    "biopython>=1.81",
    "tqdm>=4.66.0",
    "mdtraj>=1.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pre-commit>=3.6.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-jupyter>=0.24.0",
]

[project.urls]
"Homepage" = "https://github.com/aai-research-lab/CalphaEBM"
"Documentation" = "https://aai-research-lab.github.io/CalphaEBM"
"Bug Reports" = "https://github.com/aai-research-lab/CalphaEBM/issues"
"Source" = "https://github.com/aai-research-lab/CalphaEBM"

[project.scripts]
calphaebm = "calphaebm.cli.main:main"

[tool.setuptools_scm]
write_to = "src/calphaebm/_version.py"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true
strict = false
python_version = "3.9"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=calphaebm --cov-report=term --cov-report=html"
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*__array_wrap__.*:DeprecationWarning",
]
